# ImageRecognitionFromScratch

./: .env  .gitignore  README.md  best_result.txt  hello.py  pyproject.toml  tensorflow_model.ipynb
.github/workflows/: tests.yml
models/: best_model.pkl
src/: activation_function.py  activation_layer.py  config.py  fully_connected_layer.py  layer.py  learning_rate_schedulers.py  loss_function.py  main.py  network.py  optimizations.py  optimizers.py  read_data.py
src/add_ons/: activation_function.py  data_augmentation.py  early_stopping.py  learning_rate_schedulers.py  loss_function.py  optimizers.py  weight_initialization.py
src/layers/: activation_function.py  activation_layer.py  batch_normalization.py  convolution2d_layer.py  convolution_2d_layer.py  dropout_layer.py  flatten_layer.py  fully_connected_layer.py  layer.py  max_pooling_2d_layer.py
src/tests/add_ons/: test_data_augmentation.py
src/tests/layers/: convolution_2d_layer.py  test_convolution_network_propagation.py
src/utils/: convolution_utils.py  read_data.py  utils.py
