[project]
name = "image-recognition-neural-network"
version = "0.1.0"
description = "Neural network for image recognition from scratch using numpy"
readme = "README.md"
requires-python = ">=3.11"
packages = [{ include = "src" }]
dependencies = [
    "numpy>=2.1.3",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.poe.tasks]
run.help = "Run program"
run.cmd = "uv run src/main.py"

ruff.help = "Check codebaes using ruff"
ruff.cmd = "ruff check --output-format=concise ."

format.help = "Format code with ruff"
format.cmd = "ruff format ."

types.help = "Statically check types using mypy"
types.cmd = "mypy --cache-fine-grained --check-untyped-defs src"

checks.help = "Execute ruff, format and types tasks in sequence: Run ruff checks, formats and mypy"
checks.sequence = ["ruff", "format", "types"]
